funciona en android + arreglos mencionados en whatsapp

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.google.firebase.analytics": "6.16.1",
+    "com.google.firebase.auth": "6.16.1",
+    "com.google.firebase.database": "6.16.1",
     "com.unity.2d.animation": "3.2.4",
     "com.unity.2d.pixel-perfect": "2.0.4",
     "com.unity.2d.psdimporter": "2.1.5",
